--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "grpc-sys/grpc"]
 	path = grpc-sys/grpc
-	url = https://github.com/pingcap/grpc.git
+	url = https://github.com/illicitonion/grpc.git
 	branch = rs-release
